# git-external-files.rs

./: .gitignore  Cargo.toml  README.md  external-sample.json  sample.json  schema.json
libs/git-external-files-lib/: Cargo.toml
libs/git-external-files-lib/src/: fetch.rs  input.rs  lib.rs
src/: main.rs
