[package]
name = "git-external-files"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "libs/git-external-files-lib",
]

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
semver = "1.0.4"
git-external-files-lib = { path = "./libs/git-external-files-lib" }